--- a/src/app/pages/business-listing-page/business-listing-page.html
+++ b/src/app/pages/business-listing-page/business-listing-page.html
@@ -1,44 +1,86 @@
 <section class="bg-white dark:bg-gray-900 min-h-screen">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-end mx-auto p-4">
+    <app-filter title="Filter by service" subtitle="Service"></app-filter>
+  </div>
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6 ">
     <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
       <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">{{ title }}</h2>
       <p class="font-light text-gray-500 lg:mb-16 sm:text-xl dark:text-gray-400">{{ description }}</p>
     </div>
     @if (businesses$ | async; as businesses) {
-      <div class="grid gap-8 mb-6 lg:mb-16 md:grid-cols-2">
-        @for (business of businesses; track business.id) {
-          <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
-            <a href="#">
-              <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-                   src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/bonnie-green.png"
-                   alt="Bonnie Avatar">
-            </a>
-            <div class="p-5">
-              <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                <a href="#">{{business.name}}</a>
-              </h3>
-              <p class="mt-3 mb-6 font-light text-gray-500 dark:text-gray-400 min-h-[2rem]">
-                {{business.overview || 'No description available'}}
-              </p>
-              <ul class="flex space-x-4 sm:mt-0">
-                <li>
-                  <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
-                    <svg class="w-6 h-6" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                         fill="none" viewBox="0 0 24 24">
-                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M11 16v-5.5A3.5 3.5 0 0 0 7.5 7m3.5 9H4v-5.5A3.5 3.5 0 0 1 7.5 7m3.5 9v4M7.5 7H14m0 0V4h2.5M14 7v3m-3.5 6H20v-6a3 3 0 0 0-3-3m-2 9v4m-8-6.5h1"/>
+      <div class="grid gap-8 mb-6 lg:mb-16 md:grid-cols-3 sm:grid-cols-1 items-center">
+        @for (business of businesses; track business.id; let i = $index) {
+          <div class="p-3  bg-white border border-gray-200 rounded-lg shadow-xs w-80 dark:text-gray-400 dark:bg-gray-800 dark:border-gray-600">
+            <div class="flex">
+              <div class="me-3 shrink-0">
+                <a href="#" class="block p-2 bg-gray-100 rounded-lg dark:bg-gray-700">
+                  <img class="w-8 h-8 rounded-full" src="https://flowbite.com/docs/images/logo.svg" alt="Flowbite logo">
+                </a>
+              </div>
+              <div>
+                <p class="mb-1 text-base font-semibold leading-none text-gray-900 dark:text-white">
+                  <a href="#" class="hover:underline">Flowbite</a>
+                </p>
+                <p class="mb-3 text-sm font-normal">
+                  Tech company
+                </p>
+                <p class="mb-4 text-sm">Open-source library of Tailwind CSS components and Figma design system.</p>
+                <ul class="text-sm">
+                  <li class="flex items-center mb-2">
+                        <span class="me-2 font-semibold text-gray-400">
+                            <svg class="w-3.5 h-3.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 21 20">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6.487 1.746c0 4.192 3.592 1.66 4.592 5.754 0 .828 1 1.5 2 1.5s2-.672 2-1.5a1.5 1.5 0 0 1 1.5-1.5h1.5m-16.02.471c4.02 2.248 1.776 4.216 4.878 5.645C10.18 13.61 9 19 9 19m9.366-6h-2.287a3 3 0 0 0-3 3v2m6-8a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                            </svg>
+                        </span>
+                    <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline">https://flowbite.com/</a>
+                  </li>
+                  <li class="flex items-start mb-2">
+                        <span class="me-2 font-semibold text-gray-400">
+                            <svg class="w-3.5 h-3.5 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+  <path fill-rule="evenodd" d="M11.906 1.994a8.002 8.002 0 0 1 8.09 8.421 7.996 7.996 0 0 1-1.297 3.957.996.996 0 0 1-.133.204l-.108.129c-.178.243-.37.477-.573.699l-5.112 6.224a1 1 0 0 1-1.545 0L5.982 15.26l-.002-.002a18.146 18.146 0 0 1-.309-.38l-.133-.163a.999.999 0 0 1-.13-.202 7.995 7.995 0 0 1 6.498-12.518ZM15 9.997a3 3 0 1 1-5.999 0 3 3 0 0 1 5.999 0Z" clip-rule="evenodd"/>
+</svg>
+                        </span>
+                    <span class="-mt-1">
+                      Taman Cheras Hartamas
+                    </span>
+                  </li>
+                </ul>
+                <div class="flex">
+                  <button type="button" class="inline-flex items-center justify-center w-full px-5 py-2 me-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"><svg class="w-5 h-5 me-2 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-width="2" d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"/>
+                    <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
+                  </svg>
+                    More details</button>
+                  <button [attr.id]="'dropdown-button-' + i"
+                          [attr.data-dropdown-toggle]="'dropdown-menu-' + i" data-dropdown-placement="right" class="inline-flex items-center px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg shrink-0 focus:outline-none hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700" type="button">
+                    <svg class="w-3.5 h-3.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 3">
+                      <path d="M2 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm6.041 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM14 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Z"/>
                     </svg>
-                  </a>
-                </li>
-              </ul>
+                  </button>
+                </div>
+                <div [attr.id]="'dropdown-menu-' + i"
+                     [attr.aria-labelledby]="'dropdown-button-' + i" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44 dark:bg-gray-700">
+                  <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-button">
+                    <li>
+                      <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Report this page</a>
+                    </li>
+                    <li>
+                      <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Send email</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         }
       </div>
     }
   </div>
+  @if(hasMore$ | async; as hasMore) {
+
+  @if(isLoading$ | async; as isLoading) {
   <div class="flex justify-center pb-20">
-    <button [disabled]="isLoading" type="button" (click)="loadMore()"
+    <button [hidden]="!hasMore" [disabled]="isLoading" type="button" (click)="loadMore()"
             class="py-2.5 px-5 me-2 text-sm font-medium text-gray-900 bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 inline-flex items-center">
       <span [hidden]="!isLoading">
       <svg aria-hidden="true" role="status" class="inline w-4 h-4 me-3 text-gray-200 animate-spin dark:text-gray-600"
@@ -54,4 +96,6 @@
       {{ isLoading ? 'Loading...' : 'Load More' }}
     </button>
   </div>
+  }
+  }
 </section>
