--- a/src/app/pages/service-directory-page/service-directory-page.html
+++ b/src/app/pages/service-directory-page/service-directory-page.html
@@ -1,41 +1,24 @@
-<header class="p-24 border-b border-gray-200">
-<!--  <app-breadcrumb [items]="breadcrumbItems"></app-breadcrumb>-->
-  <h1 class="text-4xl">Service Directory</h1>
+<header class="p-24 border-b border-gray-200 dark:border-gray-700 dark:bg-gray-900">
+  <h1 class="text-4xl dark:text-white">Service Directory</h1>
   <p class="text-sm text-gray-400 pt-7">Find services that suits your needs</p>
 </header>
 
 <main class="grid grid-cols-1 sm:grid-cols-4 md:grid-cols-4 lg:grid-cols-4 min-h-[70rem]">
-  <div class=" col-span-1 flex justify-center">
+  <div class=" col-span-1 flex justify-center dark:bg-gray-900 dark:border-gray-700">
 
-<!--      <ng-container *ngIf="(categoryClick$ | async) as categoryId">-->
     @if(categories$ | async; as categories){
-<!--      <cdk-virtual-scroll-viewport itemSize="6" class="example-viewport">-->
-<!--        <mat-list class="p-5 rounded-sm w-full h-full">-->
-<!--          <mat-list-item *cdkVirtualFor="let item of categories;-->
-<!--trackBy: trackByFn;" class="font-black">-->
-<!--            {{ item.name }}-->
-<!--          </mat-list-item>-->
-<!--        </mat-list>-->
-<!--      </cdk-virtual-scroll-viewport>-->
-      <ul class="p-5 rounded-sm w-full h-full">
+      <ul class="p-5 w-full h-full dark:bg-gray-900 dark:border-gray-700">
       @for(category of categories; track category.id){
         <li class="my-8">
-<!--          <a class="text-sm cursor-pointer transition-all hover:text-lg hover:text-rose-600 px-12"-->
-<!--             [ngClass]="categoryId === serviceCategory.id ? 'text-rose-600 text-lg' : ''"-->
-<!--             (click)="selectCategory(serviceCategory.id)">{{serviceCategory.name}}</a>-->
-                    <a class="text-sm cursor-pointer transition-all hover:text-lg hover:text-rose-600 px-12"
+                    <a [ngClass]="selectedCategory$.value === category.id ? 'text-sm hover:text-rose-600 px-12 dark:text-rose-600' : 'text-sm cursor-pointer transition-all hover:text-lg hover:text-rose-600 px-12 dark:text-white'"
                        (click)="selectCategory(category.id)">{{category.name}}</a>
         </li>
       }
     </ul>
     }
-<!--      </ng-container>-->
   </div>
   <div
-    class="flex justify-content-center flex-col w-full px-14 sm:px-24 md:px-24 lg:px-24 py-12 gap-24 col-span-3 bg-gray-50">
-<!--    <div class="w-full">-->
-<!--      <app-search-input [control]="searchControl"></app-search-input>-->
-<!--    </div>-->
+    class="flex justify-content-center flex-col w-full px-14 sm:px-24 md:px-24 lg:px-24 py-12 gap-24 col-span-3 bg-gray-50 dark:bg-gray-900 dark:border-gray-700">
     @if(specialities$ | async; as specialities){
       <div class="grid grid-cols-1 gap-7">
         @if (specialities.length === 0) {
@@ -48,8 +31,8 @@
           </div>
         }
         @for(speciality of specialities; track speciality.id){
-          <div [routerLink]="['../','services',speciality.name]"
-               class="group relative cursor-pointer overflow-hidden bg-white px-6 pt-10 pb-8 shadow-xl ring-1 rounded-2xl ring-gray-900/5 transition-all duration-300 hover:-translate-y-3 hover:shadow-2xl sm:mx-auto w-full sm:rounded-lg sm:px-10">
+          <div [routerLink]="['/business-listing']" [queryParams]="{ service: speciality.id }"
+               class="group relative cursor-pointer overflow-hidden bg-white px-6 pt-10 pb-8 shadow-xl ring-1 rounded-2xl ring-gray-900/5 transition-all duration-300 hover:-translate-y-3 hover:shadow-2xl sm:mx-auto w-full sm:rounded-lg sm:px-10 dark:bg-gray-800 dark:ring-gray-700">
         <span
           class="absolute top-10 z-0 h-20 w-20 rounded-full bg-rose-500 transition-all duration-300 group-hover:scale-[56]"></span>
             <div class="relative z-10 mx-auto">
@@ -62,7 +45,7 @@
 </svg>
             </span>
               <div
-                class="space-y-6 pt-5 text-base leading-7 text-gray-600 transition-all duration-300 group-hover:text-white/90">
+                class="space-y-6 pt-5 text-base leading-7 text-gray-600 transition-all duration-300 group-hover:text-white/90 dark:text-white">
                 <p>{{speciality.name}}</p>
               </div>
               <div class="pt-5 text-base font-semibold leading-7">
