Add Sidebar Component with Styling and Testing
Introduced a reusable "Sidebar" component to improve navigation. Added support for dynamic options, session handling via Supabase, and user profile display. Updated the AdminLayout to include the Sidebar. Refactored and adjusted styles across components.

--- a/src/app/components/table/table.html
+++ b/src/app/components/table/table.html
@@ -27,7 +27,7 @@
 <!--  </table>-->
 <!--</div>-->
 <div class="border-1 border-gray-200 rounded-lg">
-<div class="flex items-center sm:justify-center ml-4 sm:ml-0">
+<div class="flex items-center sm:justify-center sm:ml-0">
   <table class="text-sm text-left text-gray-500  w-full">
     <thead class="hidden sm:table-header-group text-xs text-gray-700 bg-gray-100">
     <tr>
@@ -46,7 +46,7 @@
           <td class="px-6 py-4 bg-white last:rounded-b-lg sm:last:rounded-b-none sm:last:rounded-r-lg text-xs">
 
         <span class="">
-          <a href="#" class="font-medium text-blue-600 hover:underline">Edit</a>
+          <button class="font-medium text-blue-600 hover:underline">Edit</button>
         </span>
           </td>
 
