--- a/src/app/pages/admin/manage-user-page/manage-user-page.html
+++ b/src/app/pages/admin/manage-user-page/manage-user-page.html
@@ -29,6 +29,6 @@
 <!--    </tbody>-->
 <!--  </table>-->
 <!--</div>-->
-<div class="p-10">
+<div class="p-10 sm:ps-70">
   <app-table [columns]="columns" [rows]="rows"></app-table>
 </div>
