--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -9,9 +9,9 @@
   <div class="overflow-y-auto py-4 px-3 h-full bg-white border-r border-gray-200 dark:bg-gray-800 dark:border-gray-700">
     <div class="text-center text-gray-500 dark:text-gray-400">
       <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-        <a href="#">{{profile?.name ?? 'Test'}}</a>
+        <a href="#">{{profile.name ?? 'Test'}}</a>
       </h3>
-      <p class="font-light text-gray-500 dark:text-gray-400">{{profile?.email ?? 'name@company.com'}}</p>
+      <p class="font-light text-gray-500 dark:text-gray-400">{{profile.email ?? 'name@company.com'}}</p>
       <a href="#" class="inline-flex items-center justify-center w-full py-2.5 px-5 my-5 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
         <svg aria-hidden="true" class="mr-1 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path></svg>
         Logout
