Add components and services for user and business management
Introduced several components and services to manage user profiles, business details, addresses, services, and admin features. Includes guards, test specs, and form handling for improved UX and security.

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="mx-auto pt-30 pb-10 px-6 dark:bg-gray-900">
+<footer class="mx-auto pt-30 pb-10 px-6 bg-white dark:bg-gray-900">
   <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12 dark:bg-gray-900" aria-label="Footer">
     <div class="pb-6">
       <a href="#" class="text-sm leading-6 text-gray-600 hover:text-gray-900 dark:hover:text-white" [routerLink]="['']">Home</a>
