--- a/src/app/components/date-picker/date-picker.html
+++ b/src/app/components/date-picker/date-picker.html
@@ -9,7 +9,7 @@
       </svg>
     </div>
     <input [formControl]="control" name="date" datepicker id="default-datepicker" type="text"
-           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-rose-500 focus:border-rose-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-rose-500 dark:focus:border-rose-500"
            placeholder="Select date">
   </div>
   @if ((control.hasError('whitespace') || control.hasError('required')) && control.touched) {
