--- a/src/app/components/text-input/text-input.html
+++ b/src/app/components/text-input/text-input.html
@@ -1,12 +1,20 @@
 <ng-container>
   @if (control) {
     <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{ title }}</label>
+    @if(disabled){
+      <input [formControl]="control" [disabled]="disabled" class="dark:text-white dark:bg-gray-700 dark:border-gray-600 rounded-lg  bg-neutral-secondary-medium border border-default-medium text-fg-disabled text-sm rounded-base focus:ring-brand focus:border-brand block w-full px-3 py-2.5 shadow-xs placeholder:text-body"  />
+    }
+    @else{
     <input type="text" name="full-name" id="full-name"
            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
            [placeholder]="placeholder" [formControl]="control">
+    }
 
     @if ((control.hasError('whitespace') || control.hasError('required')) && control.touched) {
       <p class="mt-2 text-sm text-red-600 dark:text-red-500">{{ title }} is required!</p>
+    }
+    @if (control.hasError('email') && control.touched)  {
+      <p class="mt-2 text-sm text-red-600 dark:text-red-500">{{ title }} is invalid!</p>
     }
   }
 </ng-container>
