--- a/src/app/pages/home-page/home-page.html
+++ b/src/app/pages/home-page/home-page.html
@@ -16,13 +16,13 @@
       </svg>
       <div class="mx-auto max-w-7xl px-6 py-24 sm:py-32 lg:flex lg:items-center lg:gap-x-10 lg:px-8 lg:py-40">
         <div class="mx-auto max-w-2xl lg:mx-0 lg:flex-auto">
-          <h1 class="mt-10 max-w-lg text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">A platform to advertise your services</h1>
-          <p class="mt-6 text-lg leading-8 text-gray-600">
+          <h1 class="mt-10 max-w-lg text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl dark:text-white">A platform to advertise your services</h1>
+          <p class="mt-6 text-lg leading-8 text-gray-600 dark:text-white">
             Join us now to expand your businesses by selling your services digitally
           </p>
           <div class="mt-10 flex items-center gap-x-6">
             <a class="rounded-md bg-rose-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-rose-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-rose-600" [routerLink]="['/business-registration']">Get started</a>
-            <a class="text-sm font-semibold leading-6 text-gray-900" [routerLink]="['/service-directory']">Learn more <span aria-hidden="true">→</span></a>
+            <a class="text-sm font-semibold leading-6 text-gray-900 dark:text-white" [routerLink]="['/service-directory']">Learn more <span aria-hidden="true">→</span></a>
           </div>
         </div>
         <div class="mt-16 sm:mt-24 lg:mt-0 lg:flex-shrink-0 lg:flex-grow">
